jellyfin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        streaming: "true"
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jellyfin
          image: docker.io/jellyfin/jellyfin:12.2
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            capabilities:
              drop:
                - "ALL"
          resources:
              requests:
                  gpu.intel.com/i915: "1"
              limits:
                  gpu.intel.com/i915: "1"
          volumeMounts:
            - mountPath: /run
              name: jellyfin
              subPath: run
            - mountPath: /cache/transcodes
              name: emptydir
              subPath: transcodes
            - mountPath: /config
              name: jellyfin
              subPath: config
            - mountPath: /cache
              name: jellyfin
              subPath: cache
            - mountPath: /data/movies
              name: media
              subPath: movies
            - mountPath: /data/tvseries
              name: media
              subPath: tvseries
            - mountPath: /data/livetv
              name: media
              subPath: livetv
            - mountPath: /config/config/logging.json
              name: config
              subPath: logging.json
      volumes:
        - name: jellyfin-ovpn-conf
          secret:
            secretName: jellyfin-ovpn-conf
        - name: jellyfin
          persistentVolumeClaim:
            claimName: jellyfin
        - name: emptydir
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: config
          configMap:
            name: config
