jellyfin/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
    - websecxt
  routes:
    - match: Host(`jellyfin.mandariini.uk`)
      kind: Rule
      services:
        - name: jellyfin
          namespace: jellyfin
          port: 8096
  tls:
    secretName: mandariini-uk-tls
